feat: Enhance login and registration forms with button states and improved styles

--- a/frontend-code-expert/login.html
+++ b/frontend-code-expert/login.html
@@ -17,11 +17,11 @@
           placeholder="email"
         />
         <input id="password" type="password" placeholder="Password" /> <br /><br />
-        <button>Log in</button>
+        <button id="loginBtn">Log in</button>
         <div class="another">
+          Don't have account?<a href="register.html">Sign up</a>
+        </div>
       </form>
-        Don't have account?<a href="register.html">Sign up</a>
-      </div>
     </center>
     <script src="js/login.js"></script>
   </body>
