--- a/frontend-code-expert/register.html
+++ b/frontend-code-expert/register.html
@@ -35,7 +35,7 @@
           placeholder="CONFIRM PASSWORD"
           required
         /><br /><br />
-        <button type="submit">Submit</button>
+        <button type="submit" id="submitBtn">Submit</button>
         <div class="anotherpage">
           Have an Account? <a href="login.html">Login</a>
         </div>
