--- a/frontend-code-expert/code_convert.html
+++ b/frontend-code-expert/code_convert.html
@@ -43,7 +43,7 @@
           <option value="C">C</option>
           <option value="Javascript">Javascript</option>
           <option value="Ruby">Ruby</option>
-          <option value="ABAP">Ruby</option>
+          <option value="ABAP">ABAP</option>
         </select>
       </div>
       <div class="rightside" style="color: white">
